# delphi-devkit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE.txt  README.md  esbuild.js  eslint.config.mjs  package-lock.json  package.json
.cargo/: config.toml
.github/instructions/: rust.instructions.md
.github/workflows/: publish_extension.yml
cli/: Cargo.toml
cli/src/: main.rs
config/iconThemes/: ddk-file-icons.json
config/languages/grammar/: compiler-output.json
config/themes/: compiler-output.colors.json
copilot_docs/: PARSER_ARCHITECTURE_DISCUSSION.md
core/: Cargo.toml
core/src/: commands.rs  encoding.rs  lib.rs  lsp_types.rs  state.rs
core/src/files/: dproj.rs
core/src/parser/: directives.rs  lexer.rs  mod.rs  precompiler.rs  token.rs
core/src/projects/: changes.rs  compiler_config.rs  diag.rs  group_project.rs  mod.rs  project.rs  project_data.rs  workspace.rs
core/src/projects/compiler/: mod.rs
core/src/projects/presets/: default_compilers.ron  default_ini.ini
core/src/utils/: mod.rs
core/tests/: commands.rs  compiler_config.rs  compiler_state.rs  diag.rs  document.rs  encoding.rs  lexorank.rs  project_data.rs  project_link_container.rs
core/tests/utils/: normalize_path.rs
mcp/: Cargo.toml
mcp/src/: handler.rs  main.rs
projects/: Cargo.toml
projects/src/: encoding.rs  lib.rs  state.rs
projects/src/lexorank/: README.md
projects/src/mcp/: mod.rs
projects/src/projects/: compiler_config.rs  project_data.rs
projects/src/projects/compiler/: mod.rs
projects/src/utils/: mod.rs
server/: Cargo.toml
server/assets/: compiler.ps1
server/src/: lsp_types.rs  main.rs
server/src/files/: dproj.rs  groupproj.rs  mod.rs
server/src/format/: mod.rs
server/src/lexorank/: LICENSE  lexorank.rs  mod.rs  rank.rs
server/src/projects/: changes.rs  compiler.rs  compiler_config.rs  compilers.rs  default_compilers.ron  diag.rs  file_watch.rs  group_project.rs  migrations_v1.rs  mod.rs  project.rs  project_data.rs  workspace.rs
server/src/projects/compiler/: compiler_state.rs  mod.rs
server/src/projects/presets/: default_compilers.ron
server/src/utils/: mod.rs
src/: constants.ts  extension.ts  runtime.ts  types.ts  utils.ts
src/db/: databaseController.ts  datasource.ts  entities.ts  restorable.ts
src/delphiProjects/: DelphiProjectsDragAndDropController.ts  README.md  benchmark.ts  index.ts  provider.ts  types.ts
src/delphiProjects/contextMenu/: commands.ts
src/delphiProjects/data/: cacheManager.ts  projectDiscovery.ts  projectLoader.ts
src/delphiProjects/groupProject/: GroupProjectService.ts
src/delphiProjects/treeItems/: DelphiProject.ts  DelphiProjectTreeItem.ts  DragAndDropController.ts
src/delphiProjects/utils/: getExpectedExePathFromDproj.ts
src/dfm/: commands.ts  feature.ts  language.ts
src/dfmLanguageSupport/: provider.ts
src/dfmSwap/: command.ts
src/dprExplorer/: DprFile.ts  DprTreeItem.ts  DprojFile.ts  ExecutableFile.ts  README.md  index.ts  provider.ts  utils.ts
src/dprExplorer/contextMenu/: commands.ts
src/lsp/: client.ts
src/projects/: README.md  commands.ts  feature.ts  types.ts
src/projects/compiler/: compile.ps1  compiler.ts  compilerOutputLinkProvider.ts  index.ts  language.ts  statusBar.ts
src/projects/contextMenu/: commands.ts  statusBar.ts
src/projects/data/: dprojParser.ts  groupProjParser.ts  projectDiscovery.ts
src/projects/pickers/: groupProjPicker.ts
src/projects/treeItems/: DragAndDropController.ts  delphiProject.ts  delphiProjectTreeItem.ts  dpkFile.ts  dprFile.ts  dprojFile.ts  exeFile.ts  iniFile.ts  provider.ts  selectedItemDecorator.ts  treeView.ts
src/projects/trees/: dragAndDrop.ts  treeItemDecorator.ts
src/projects/trees/items/: dprFile.ts  dprojFile.ts  exeFile.ts  iniFile.ts  project.ts
src/typings/: git.d.ts  index.ts
src/utils/: lexoSorter.ts
vscode_extension/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
vscode_extension/config/languages/grammar/: compiler-output.json
vscode_extension/config/themes/: compiler-output.colors.json
vscode_extension/src/: client.ts  commands.ts  constants.ts  extension.ts  runtime.ts  types.ts  utils.ts
vscode_extension/src/dfm/: commands.ts  feature.ts
vscode_extension/src/formatter/: feature.ts
vscode_extension/src/mcp/: server.ts
vscode_extension/src/projects/: commands.ts  entities.ts  feature.ts
vscode_extension/src/utils/: lexoSorter.ts
winget/: ValentinBaron.DDK.installer.yaml  ValentinBaron.DDK.locale.en-US.yaml  ValentinBaron.DDK.yaml
(+16 files in other folders)
