[package]
name = "ddk-mcp-server"
version = "2.0.2"
edition = "2024"
authors = ["Valentin Baron"]
license-file = "../LICENSE"
description = "DDK – standalone MCP server (STDIO transport)"
homepage = "https://www.github.com/valentin-baron"
repository = "https://www.github.com/valentin-baron/delphi-devkit"

[[bin]]
name = "ddk-mcp-server"
path = "src/main.rs"

[dependencies]
ddk-projects = { path = "../projects" }
rust-mcp-sdk = { version = "0.8.3", default-features = false, features = ["server", "macros", "stdio"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
