[package]
name = "ddk-mcp-server"
version = "2.0.5"
edition = "2024"
authors = ["Valentin Baron"]
license-file = "../LICENSE"
description = "DDK – standalone MCP server (STDIO transport)"
homepage = "https://www.github.com/valentin-baron"
repository = "https://www.github.com/valentin-baron/delphi-devkit"

[[bin]]
name = "ddk-mcp-server"
path = "src/main.rs"

[dependencies]
ddk-core = { path = "../core" }
async-trait = "0.1.89"
rust-mcp-sdk = { version = "0.8.3", default-features = false, features = ["server", "macros", "stdio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
