[package]
name = "ddk-server"
version = "2.0.0"
edition = "2024"
authors = ["Valentin Baron"]
license-file = "../LICENSE"
description = "DDK - Language Server"
homepage = "https://www.github.com/valentin-baron"
repository = "https://www.github.com/valentin-baron/delphi-devkit"
keywords = ["delphi", "lsp", "language-server", "development", "ide", "tools"]
categories = ["development-tools", "language-servers"]
readme = "../README.md"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.43"
dirs = "6.0.0"
fslock = "0.2.1"
lazy_static = "1.5.0"
notify = "8.2.0"
phf = { version = "0.13.1", features = ["macros"] }
regex = "1.12.2"
ron = "0.12.0"
roxmltree = "0.21.1"
scopeguard = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
substring = "1.4.5"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "time", "tokio-macros"] }
tower-lsp = { version = "0.20.0" }
