[package]
name = "ddk-server"
version = "2.1.2"
edition = "2024"
authors = ["Valentin Baron"]
license-file = "../LICENSE"
description = "DDK – Delphi Language Server (LSP)"
homepage = "https://www.github.com/valentin-baron"
repository = "https://www.github.com/valentin-baron/delphi-devkit"

[[bin]]
name = "ddk-server"
path = "src/main.rs"

[dependencies]
ddk-core = { path = "../core" }
anyhow = "1.0.100"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tower-lsp = { version = "0.20.0" }
